--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore environment variable files
+.env
+
+# Project output files
+Server1/
+Server2/
+Server3/
+simulator.log
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
