--- a/config.json
+++ b/config.json
@@ -4,7 +4,12 @@
     "log_interval_seconds": 5,
     "log_interval_variation": 2,
     "max_runtime_minutes": 0,
-    "timezone_offset": "+03:00"
+    "timezone_offset": "+03:00",
+    "per_server": {
+      "1": { "log_interval_seconds": 5, "log_interval_variation": 2 },
+      "2": { "log_interval_seconds": 3, "log_interval_variation": 1 },
+      "3": { "log_interval_seconds": 7, "log_interval_variation": 2 }
+    }
   },
   "error_types": {
     "startup": {
@@ -55,9 +60,20 @@
   "output": {
     "encoding": "utf-16le",
     "log_rotation": {
-      "enabled": false,
+      "enabled": true,
       "max_size_mb": 10,
       "max_files": 5
+    }
+  },
+  "bursts": {
+    "enabled": false,
+    "chance_per_entry": 0.02,
+    "duration_seconds_range": [10, 30],
+    "interval_multiplier": 0.25,
+    "error_type_weights_override": {
+      "login_failed": 40,
+      "deadlock": 25,
+      "timeout": 25
     }
   },
   "randomization": {
