--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "simulation": {
     "server_count": 3,
-    "log_interval_seconds": 5,
+    "log_interval_seconds": 25,
     "log_interval_variation": 2,
     "max_runtime_minutes": 0,
     "timezone_offset": "+03:00",
     "per_server": {
-      "1": { "log_interval_seconds": 5, "log_interval_variation": 2 },
-      "2": { "log_interval_seconds": 3, "log_interval_variation": 1 },
-      "3": { "log_interval_seconds": 7, "log_interval_variation": 2 }
+      "1": { "log_interval_seconds": 25, "log_interval_variation": 2 },
+      "2": { "log_interval_seconds": 15, "log_interval_variation": 1 },
+      "3": { "log_interval_seconds": 5, "log_interval_variation": 2 }
     }
   },
   "error_types": {
@@ -103,6 +103,15 @@
       "enabled": true,
       "max_size_mb": 10,
       "max_files": 5
+    }
+  },
+  "kafka": {
+    "enabled": true,
+    "bootstrap_servers": "localhost:29092",
+    "topic": "sql-server-raw-errorlogs",
+    "producer_options": {
+      "acks": "all",
+      "retries": 3
     }
   },
   "bursts": {
